...
          widget.recipeId == null
              ? appLocalizations.addRecipeTitle
              : appLocalizations.editRecipeTitle,
        ),
        actions: [
          IconButton(
            key: const Key('save_recipe_button'),
            icon: const Icon(Icons.save),
            onPressed: _saveRecipe,
          ),
        ],
      ),
      body: SingleChildScrollView(
...
        child: Form(
          key: _formKey,
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              TextFormField(
                key: const Key('recipe_name_input_field'),
                controller: _nameController,
                decoration: InputDecoration(
                  labelText: appLocalizations.recipeNameLabel,
                ),
                validator: (value) {
                  if (value == null || value.isEmpty) {
...
                    );
                  }).toList(),
                ),
              ],
              const SizedBox(height: 16),
              TextFormField(
                key: const Key('instructions_input_field'),
                controller: _instructionsController,
                decoration: InputDecoration(
                  labelText: appLocalizations.instructionsLabel,
                ),
                maxLines: null,
                keyboardType: TextInputType.multiline,
...
