...
            TextButton(
              onPressed: () => Navigator.of(dialogContext).pop(false),
              child: Text(appLocalizations.cancelButton),
            ),
            TextButton(
              onPressed: () => Navigator.of(dialogContext).pop(true),
              key: const Key('add_recipe_dialog_add_button'),
              child: Text(appLocalizations.addButton),
            ),
          ],
        );
      },
    );
...
